--- a/index.html
+++ b/index.html
@@ -7,37 +7,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Días inhabiles</title>
+    <title>Días no laborables</title>
     <link rel="icon" href="assets/img/NonWork.png">
 </head>
 
 <body>
-    <section class="container-sm" style="margin: 0 auto;">
-        <form class="row justify-content-center">
-            <div class="col-sm-3 mt-3 text-center align-self-center">
-                <label for="day" class="form-label">Día</label>
-                <input type="text" id="day" class="form-control text-center" required>
-            </div>
-            <div class="col-sm-3 mt-3 text-center align-self-center">
-                <label for="day" class="form-label">Mes</label>
-                <input type="text" id="month" class="form-control text-center" required>
-            </div>
-            <div class="col-sm-3 mt-3 text-center align-self-center">
-                <label for="day" class="form-label">Año</label>
-                <input type="text" id='year' class="form-control text-center" required>
-            </div>
-            <div class="col-sm-8 mt-3 align-self-center text-center">
-                <button type="submit" id="calculate" class="btn btn-primary w-100">
-                    Calcular
-                </button>
-            </div>
-            <div class="col-sm-8 mt-3 align-self-center">
-                <input type="text" id="result" class="form-control text-center" disabled>
-            </div>
-        </form>
-    </section>
+    <div class="container w-75 border border-2 rounded-3 my-5 p-3">
+        <!-- Titulo -->
+        <h6>Calendario Gregoriano</h6>
+
+        <p id="textError" class="text-danger fw-bold"></p>
+
+        <!-- Fecha -->
+        <div class="container row my-2 align-items-center mx-auto gap-2">
+            <label class="col-lg-3">FECHA</label>
+            <input id="inputDay" class="col-lg form-control" month="day" placeholder="29" type="text" required/>
+            <select id="inputMonth" class="col-lg form-control" required>
+                <option value="0">Enero</option>
+                <option value="1">Febrero</option>
+                <option value="2">Marzo</option>
+                <option value="3">Abril</option>
+                <option value="4">Mayo</option>
+                <option value="5">Junio</option>
+                <option value="6">Julio</option>
+                <option value="7">Agosto</option>
+                <option value="8">Septiembre</option>
+                <option value="9">Octubre</option>
+                <option value="10">Noviembre</option>
+                <option value="11">Diciembre</option>
+            </select>
+            <input id="inputYear" class="col-lg form-control" type="text" placeholder="2022" required />
+            <input id="inputLeap" class="col-lg form-control" type="text" readonly />
+        </div>
+
+        <!-- Calcular -->
+        <div class="text-center">
+            <button id="btnCalculate" class="btn btn-outline-primary">
+                Calcular
+            </button>
+        </div>
+
+        <!-- Resultado -->
+        <div class="container row my-2 input-group align-items-center mx-auto gap-2">
+            <label class="col-lg-3">Este dia es:</label>
+            <input id="inputWorkingDay" class="col-5 form-control" type="text" readonly />
+        </div>
+    </div>
     <script src="./js/bootstrap.bundle.min.js"></script>
-    <script src=funciones.js""></script>
+    <script src="./funciones.js"></script>
 </body>
 
 </html>
